Fix error page alignment

--- a/static/site.css
+++ b/static/site.css
@@ -15,6 +15,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 /* ----------------------------------------- Error Pages ---------------------------------------- */
